# limnx

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  limine.conf  run-arm64.sh  run-tests.sh  run-x86.sh  run.sh
.github/workflows/: build.yml
docs/: WORKFLOWS.md
include/limnx/: stat.h  syscall_nr.h  virtio_accel.h
initrd/: busybox-arm64.elf  busybox.elf  hello.txt  test.gguf  test.wasm  test_gqa.gguf  test_musl.elf
kernel/: get-deps.sh  linker.ld
kernel/src/: compiler.h  config.h  errno.h  io.h  klog.h  kquiet.h  kutil.h  main.c  serial.c  serial.h
tools/: gen_gguf.py  gen_wasm.py  gpu_inference_server.py  mklimnfs.py  netstor_server.py  train_gguf.py  train_model.py
tools/qemu-virtio-accel/: README.md  meson.build  virtio-accel.c  virtio-accel.h
user/: agent.c  agentrt.c  agenttest.c  agenttest2.c  cat.asm  fstest.c  fstest2.c  generate.c  gguf2test.c  gguftest.c  hello.asm  inferd.c  mathtest.c  memtest.c  netagent.c  ostest.c  s30test.c  s33test.c  s34test.c  s37test.c  s39test.c  s41test.c  s42test.c  s44test.c  s45test.c  s48test.c  s50test.c  s56test.c  s57test.c  s61test.c  s63test.c  s64test.c  s65test.c  s68test.c  s71test.c  s72test.c  s73test.c  s74test.c  s77test.c  s78test.c  (+4 more)
user/asm/: cat.asm  hello.asm  udpecho.asm  writetest.asm
user/libc/: accel.c  agent.c  dequant.c  fio.c  gguf.c  http.c  http.h  libc.h  malloc.c  math.c  start.asm  start.c  stdio.c  string.c  syscalls.asm  syscalls.c  tensor.c  tensor.h  tokenizer.c  tooldispatch.c  transformer.c  transformer.h  vecstore.c  wasm.c  wasm.h
user/programs/: agentd.c  (+42 more)
(+239 files in other folders)
